// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEntryPoint when unified dashboard is enabled should render the unified dashboard 1`] = `
<div>
  <div>
    DashboardMainApp
    {}
  </div>
</div>
`;

exports[`DashboardEntryPoint when unified dashboard is enabled when passed the setupModuleSlug prop should render the module setup component 1`] = `
<div>
  <div>
    ModuleSetup
    {"moduleSlug":"analytics"}
  </div>
</div>
`;

exports[`DashboardEntryPoint when unified dashboard is not enabled should render the non-unified dashboard 1`] = `
<div>
  <div>
    NotificationCounter
    {}
  </div>
  <div>
    DashboardApp
    {}
  </div>
</div>
`;

exports[`DashboardEntryPoint when unified dashboard is not enabled when passed the setupModuleSlug prop should render the module setup component 1`] = `
<div>
  <div>
    ModuleSetup
    {"moduleSlug":"analytics"}
  </div>
</div>
`;
